// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClassyModal Component matches snapshot with complex children 1`] = `
<div
  class="classy-modal classy-modal__test-modal"
  data-overlay-class="classy-modal__overlay classy-modal__overlay--test-modal"
  data-testid="modal"
>
  <div
    class="modal-content"
  >
    <header>
      <h1>
        Complex Modal
      </h1>
    </header>
    <main>
      <p>
        This is a complex modal with multiple elements.
      </p>
      <form>
        <input
          placeholder="Enter text"
          type="text"
        />
        <button
          type="submit"
        >
          Submit
        </button>
      </form>
    </main>
  </div>
</div>
`;

exports[`ClassyModal Component matches snapshot with custom className 1`] = `
<div
  class="classy-modal custom-class"
  data-overlay-class="classy-modal__overlay classy-modal__overlay--test-modal"
  data-testid="modal"
>
  <div>
    Test Modal Content
  </div>
</div>
`;

exports[`ClassyModal Component matches snapshot with custom overlay className 1`] = `
<div
  class="classy-modal classy-modal__test-modal"
  data-overlay-class="classy-modal__overlay custom-overlay"
  data-testid="modal"
>
  <div>
    Test Modal Content
  </div>
</div>
`;

exports[`ClassyModal Component matches snapshot with default props 1`] = `
<div
  class="classy-modal classy-modal__test-modal"
  data-overlay-class="classy-modal__overlay classy-modal__overlay--test-modal"
  data-testid="modal"
>
  <div>
    Test Modal Content
  </div>
</div>
`;
